fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,11 +2,15 @@
 @tailwind components;  
 @tailwind utilities;
 
+
+
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: 'Outfit', sans-serif;
+  overflow-x: hidden;
 }
 
 * {
